--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.thymeleaf.cache=false
+#spring.thymeleaf.cache=false
 server.port=8081
 
 # ==========================
@@ -6,16 +6,19 @@ server.port=8081
 # ==========================
 
 #Set here configurations for the database connection
-spring.datasource.url=jdbc:mysql://localhost:3306/buddy
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/buddy
+spring.datasource.url=jdbc:postgresql://elmer.db.elephantsql.com:5432/iredyubl
+spring.datasource.platform=postgres
 
 #Username and secret
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=iredyubl
+spring.datasource.password=pKw6aTx4kMlMZIDXGYFRFXsBQISYOr6k
 
 #Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhilleIdle=true
 spring.datasource.validationQuery=SELECT 1
-
 
 # ==========================
 # =JPA/HIBERNATE
@@ -33,4 +36,6 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 #Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
