--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>9.3-1100-jdbc41</version>
+            <!--<version>9.3-1100-jdbc41</version>-->
         </dependency>
 
         <!-- exclude tomcat jdbc connection pool, use HikariCP -->
