--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/buddy
 #spring.datasource.url=jdbc:postgresql://elmer.db.elephantsql.com:5432/iredyubl
-spring.datasource.url=jdbc:postgresql://ec2-54-225-88-191.compute-1.amazonaws.com:5432/d44m8ldlji0o5d
+spring.datasource.url=jdbc:postgresql://ec2-54-225-88-191.compute-1.amazonaws.com:5432/d44m8ldlji0o5d?sslmode=require
 
 #spring.datasource.platform=postgres
 
